[gd_scene load_steps=5 format=3 uid="uid://bs3avrboud4gc"]

[ext_resource type="Script" uid="uid://dwkotdyumqu2r" path="res://levels/level_one.gd" id="1_nxahq"]
[ext_resource type="PackedScene" uid="uid://ka8b444ai3tg" path="res://living_stuff/enemy_one.tscn" id="2_nxahq"]
[ext_resource type="PackedScene" uid="uid://bgi21s1hlbsy8" path="res://level.tscn" id="2_tfbuk"]
[ext_resource type="PackedScene" uid="uid://dpk1s0kjdf8hk" path="res://living_stuff/boss_one.tscn" id="4_tfbuk"]

[node name="LevelOne" type="Node"]
script = ExtResource("1_nxahq")
mob_scene = ExtResource("2_nxahq")
boss_scene = ExtResource("4_tfbuk")
level_select = "uid://db135r1vagu1t"

[node name="BossSpawnPosition" type="Node2D" parent="."]
position = Vector2(524, 175)

[node name="PlayerSpawnPosition" type="Node2D" parent="."]
position = Vector2(535, 565)

[node name="EnemySpawners" type="Node2D" parent="."]

[node name="Node2D2" type="Node2D" parent="EnemySpawners"]
position = Vector2(169, 121)

[node name="Node2D9" type="Node2D" parent="EnemySpawners"]
position = Vector2(891, 122)

[node name="Node2D10" type="Node2D" parent="EnemySpawners"]
position = Vector2(994, 120)

[node name="Node2D3" type="Node2D" parent="EnemySpawners"]
position = Vector2(271, 121)

[node name="Node2D4" type="Node2D" parent="EnemySpawners"]
position = Vector2(374, 119)

[node name="Node2D5" type="Node2D" parent="EnemySpawners"]
position = Vector2(474, 122)

[node name="Node2D6" type="Node2D" parent="EnemySpawners"]
position = Vector2(577, 120)

[node name="Node2D21" type="Node2D" parent="EnemySpawners"]
position = Vector2(73, 120)

[node name="Node2D7" type="Node2D" parent="EnemySpawners"]
position = Vector2(679, 120)

[node name="Node2D8" type="Node2D" parent="EnemySpawners"]
position = Vector2(782, 118)

[node name="Node2D11" type="Node2D" parent="EnemySpawners"]
position = Vector2(119, 231)

[node name="Node2D12" type="Node2D" parent="EnemySpawners"]
position = Vector2(222, 229)

[node name="Node2D13" type="Node2D" parent="EnemySpawners"]
position = Vector2(944, 230)

[node name="Node2D14" type="Node2D" parent="EnemySpawners"]
position = Vector2(1047, 228)

[node name="Node2D15" type="Node2D" parent="EnemySpawners"]
position = Vector2(324, 229)

[node name="Node2D20" type="Node2D" parent="EnemySpawners"]
position = Vector2(841, 227)

[node name="Node2D16" type="Node2D" parent="EnemySpawners"]
position = Vector2(427, 227)

[node name="Node2D17" type="Node2D" parent="EnemySpawners"]
position = Vector2(527, 230)

[node name="Node2D18" type="Node2D" parent="EnemySpawners"]
position = Vector2(630, 228)

[node name="Node2D19" type="Node2D" parent="EnemySpawners"]
position = Vector2(732, 228)

[node name="Level" parent="." instance=ExtResource("2_tfbuk")]
